--- a/src/app/components/counter/counter.component.html
+++ b/src/app/components/counter/counter.component.html
@@ -1,1 +1,12 @@
-<p>counter works!</p>
+<p>Counter value: {{ counterValue() }}</p>
+<div>
+    <button (click)="increment()">
+        Increment
+    </button>
+    <button (click)="decrement()">
+        Decrement
+    </button>
+    <button (click)="reset()">
+        Reset
+    </button>
+</div>
